--- a/index.html
+++ b/index.html
@@ -31,39 +31,47 @@
     <section id="introduction">
         <div id="textIntro">
             <h2>La communication par l'icône, au dela du handicap</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima harum distinctio soluta eaque odit magnam
-                omnis culpa suscipit cupiditate aperiam, consectetur doloribus, in libero, praesentium possimus est
-                pariatur nemo iste?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ad iure praesentium doloribus,
+                quas consequatur blanditiis libero, dolores nam sed necessitatibus minus dolore molestias veniam facere
+                eveniet itaque quam voluptatibus! Dolorum placeat necessitatibus accusantium voluptates nihil
+                exercitationem reiciendis, adipisci ratione distinctio ad voluptatem consequatur iure vel odit ipsam
+                nisi expedita nam consectetur similique totam soluta facere suscipit? Veritatis, non. Reprehenderit!</p>
             <img id="imgDemo" src="assets/moodPageV1.jpg" alt="écran de demo">
         </div>
+    </section>
 
-        <div id="presentation">
-            <h3>Lorem ipsum dolor sit amet consectetur</h3>
-            <div id="imagesIcon">
+    <section id="presentation">
+        <h3>Lorem ipsum dolor sit amet consectetur</h3>
+        <div class="imageDuo">
+            <div class="iconAndText">
                 <img src="assets/conversation.png" alt="icône de conversation">
-                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima harum distinctio soluta eaque odit
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima harum distinctio soluta eaque odit
                     magnam
-                    omnis culpa suscipit cupiditate aperiam.</h4>
+                    omnis culpa suscipit cupiditate aperiam.</p>
             </div>
-            <div id="imagesIcon">
+            <div class="iconAndText">
                 <img src="assets/medecin.png" alt="icône de medecin">
-                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima harum distinctio soluta eaque odit
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima harum distinctio soluta eaque odit
                     magnam
-                    omnis culpa suscipit cupiditate aperiam.</h4>
-            </div>
-            <div id="imagesIcon">
-                <img src="assets/proches.png" alt="icône de proches">
-                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima harum distinctio soluta eaque odit
-                    magnam
-                    omnis culpa suscipit cupiditate aperiam.</h4>
-            </div>
-            <div id="imagesIcon">
-                <img src="assets/iconeParam.png" alt="icône de paramètres">
-                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima harum distinctio soluta eaque odit
-                    magnam
-                    omnis culpa suscipit cupiditate aperiam.</h4>
+                    omnis culpa suscipit cupiditate aperiam.</p>
             </div>
         </div>
+        
+        <div class="imageDuo">
+            <div class="iconAndText">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima harum distinctio soluta eaque odit
+                    magnam
+                    omnis culpa suscipit cupiditate aperiam.</p>
+                <img src="assets/proches.png" alt="icône de proches">
+            </div>
+            <div class="iconAndText">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima harum distinctio soluta eaque odit
+                    magnam
+                    omnis culpa suscipit cupiditate aperiam.</p>
+                <img src="assets/iconeParam.png" alt="icône de paramètres">
+            </div>
+        </div>
+
     </section>
 
 
